Fix delete button alignment

--- a/app/form/fields/ArrayFormField.module.css
+++ b/app/form/fields/ArrayFormField.module.css
@@ -39,3 +39,7 @@
 .itemInput {
 	flex: 1;
 }
+
+.removeButton {
+	height: var(--field-size);
+}
